--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ footer {
     line-height: 1.5;
     padding: 20px;
     text-align: left;
-    margin-top: 40px;
+    margin: 40px -20px -20px -20px;
 }
 
 .footer-links   {
