--- a/nav.css
+++ b/nav.css
@@ -4,10 +4,10 @@ Author: Becky Roesch
 Course: IS_LT 7355 Web Design & Development
 University of Missouri, Summer 2025
 Created: June 25, 2025
-Last Updated: July 2, 2025
-Tested: July 1, 2025 - Passed validation
+Last Updated: July 6, 2025
+Tested: July 6, 2025 - Passed validation
+*/
 
-Updated: Single responsive navigation using checkbox trick */
 
 /* ----- CSS COLOR PALETTE ----- */
 :root {
