--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ Tested: July 6, 2025 - Passed validation
     --footer-bg: var(--dark-slate);
     --footer-text: var(--pure-white);
     --footer-links: var(--pure-white);
-    --footer-link-hover: var(--vibrant-orange);
+    ---link-hover: var(--vibrant-orange);
 
 }
 
@@ -235,6 +235,9 @@ blockquote::after {
 
 footer {
     background: var(--footer-bg);
+    background-image: url('./content/footer_bg.png'); /* footer bkgd image - assignment requirement */
+    background-repeat: repeat;
+    background-size: 100px 100px;
     color: var(--footer-text);
     font-family: 'Inter', sans-serif;
     font-weight: 400;
